// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HStack edge cases should render correctly with children without keys 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    No Key 1
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    No Key 2
  </Text>
</View>
`;

exports[`HStack edge cases should render correctly with empty children 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
/>
`;

exports[`HStack edge cases should render correctly with no children 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
/>
`;

exports[`HStack snapshots should render correctly in dark mode 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    First
  </Text>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    Second
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Third
  </Text>
</View>
`;

exports[`HStack snapshots should render correctly in light mode 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    First
  </Text>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    Second
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Third
  </Text>
</View>
`;

exports[`HStack spacing behavior should apply correct spacing between multiple children 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 32,
        },
      ]
    }
  >
    Child 1
  </Text>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 32,
        },
      ]
    }
  >
    Child 2
  </Text>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 32,
        },
      ]
    }
  >
    Child 3
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Child 4
  </Text>
</View>
`;

exports[`HStack spacing behavior should not apply margin to last child 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 24,
        },
      ]
    }
  >
    First
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Last
  </Text>
</View>
`;

exports[`HStack with custom styling should render correctly with custom style 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      {
        "backgroundColor": "red",
        "padding": 10,
      },
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    First
  </Text>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    Second
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Third
  </Text>
</View>
`;

exports[`HStack with custom styling should render correctly with custom style and spacing 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      {
        "backgroundColor": "blue",
      },
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 24,
        },
      ]
    }
  >
    First
  </Text>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 24,
        },
      ]
    }
  >
    Second
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Third
  </Text>
</View>
`;

exports[`HStack with different alignment should render correctly with center alignment 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    First
  </Text>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    Second
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Third
  </Text>
</View>
`;

exports[`HStack with different alignment should render correctly with flex-end alignment 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "flex-end",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    First
  </Text>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    Second
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Third
  </Text>
</View>
`;

exports[`HStack with different alignment should render correctly with flex-start alignment 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    First
  </Text>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    Second
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Third
  </Text>
</View>
`;

exports[`HStack with different alignment should render correctly with stretch alignment 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "stretch",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    First
  </Text>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    Second
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Third
  </Text>
</View>
`;

exports[`HStack with different children types should render correctly with children having existing styles 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "red",
        },
        {
          "marginRight": 24,
        },
      ]
    }
  >
    Styled Text 1
  </Text>
  <Text
    style={
      [
        {
          "fontWeight": "bold",
        },
        {
          "marginRight": 24,
        },
      ]
    }
  >
    Styled Text 2
  </Text>
  <View
    style={
      [
        {
          "backgroundColor": "blue",
          "padding": 5,
        },
        false,
      ]
    }
  >
    <Text>
      Nested Content
    </Text>
  </View>
</View>
`;

exports[`HStack with different children types should render correctly with mixed children types 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    Text Child
  </Text>
  <View
    style={
      [
        {
          "backgroundColor": "red",
          "height": 20,
          "width": 20,
        },
        {
          "marginRight": 16,
        },
      ]
    }
  />
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Another Text
  </Text>
</View>
`;

exports[`HStack with different children types should render correctly with null/undefined children 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    Valid Child
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Another Valid Child
  </Text>
</View>
`;

exports[`HStack with different children types should render correctly with single child 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Single Child
  </Text>
</View>
`;

exports[`HStack with different children types should render correctly with string children 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginRight": 16,
      }
    }
  >
    String child 1
  </View>
  <View
    style={
      {
        "marginRight": 16,
      }
    }
  >
    String child 2
  </View>
  <View>
    String child 3
  </View>
</View>
`;

exports[`HStack with different spacing should render correctly with lg spacing 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 24,
        },
      ]
    }
  >
    First
  </Text>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 24,
        },
      ]
    }
  >
    Second
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Third
  </Text>
</View>
`;

exports[`HStack with different spacing should render correctly with md spacing 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    First
  </Text>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 16,
        },
      ]
    }
  >
    Second
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Third
  </Text>
</View>
`;

exports[`HStack with different spacing should render correctly with sm spacing 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 8,
        },
      ]
    }
  >
    First
  </Text>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 8,
        },
      ]
    }
  >
    Second
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Third
  </Text>
</View>
`;

exports[`HStack with different spacing should render correctly with xl spacing 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 32,
        },
      ]
    }
  >
    First
  </Text>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 32,
        },
      ]
    }
  >
    Second
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Third
  </Text>
</View>
`;

exports[`HStack with different spacing should render correctly with xs spacing 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 4,
        },
      ]
    }
  >
    First
  </Text>
  <Text
    style={
      [
        undefined,
        {
          "marginRight": 4,
        },
      ]
    }
  >
    Second
  </Text>
  <Text
    style={
      [
        undefined,
        false,
      ]
    }
  >
    Third
  </Text>
</View>
`;
